--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "adm-zip": "^0.4.11",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.4",
     "rxjs": "^6.3.1",
+    "url-parse": "^1.4.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
