--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
     "@angular/animations": "^6.1.6",
     "@angular/common": "^6.1.6",
     "@angular/compiler": "^6.1.6",
-    "@angular/core": "^6.1.6",
+    "@angular/core": "^7.2.16",
     "@angular/forms": "^6.1.6",
     "@angular/http": "^6.1.6",
     "@angular/platform-browser": "^6.1.6",
     "@angular/platform-browser-dynamic": "^6.1.6",
     "@angular/router": "^6.1.6",
     "adm-zip": "^0.4.11",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
     "hoek": "^5.0.4",
     "rxjs": "^6.3.1",
-    "url-parse": "^1.4.3",
+    "rxjs-tslint": "^0.1.8",
+    "url-parse": "^1.5.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.1.6",
+    "@angular-devkit/build-angular": "^12.1.0",
+    "@angular/cli": "^12.1.0",
+    "@angular/compiler-cli": "^12.1.1",
     "@angular/language-service": "^6.1.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -40,12 +41,12 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
